# modelseal

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-decomposed-prior-art.md  0002-zero-dep-core-scanner-packs.md  0003-provenance-hash-only-first.md  0004-bypass-resistance-fail-closed.md  0005-baseline-manifest-granularity.md  0006-network-isolation-provider-abc.md
docs/demo-viewer/: index.html
docs/spec/: design.md  requirements.md  tasks.md
scripts/: produce_video.py
src/modelseal/: __init__.py  cli.py  registry.py
src/modelseal/core/: baseline.py  contracts.py  engine.py  provenance.py  render.py
src/modelseal/packs/explain/: ollama_provider.py
src/modelseal/packs/scanners/: archive.py  gguf_hdr.py  pickle_xray.py  rules.py  safetensors_hdr.py
tests/: conftest.py  test_baseline.py  test_bypass_probe.py  test_engine.py  test_explain.py  test_formats.py  test_no_network_in_core.py  test_non_execution.py  test_pickle_xray.py  test_provenance.py  test_render.py  test_unreadable.py
