[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelseal"
version = "0.1.0"
description = "Inspection gate for AI model artifacts — non-executing pickle x-ray, provenance, and approval-baseline diff. Zero-dependency core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai-security", "model-scanning", "pickle", "supply-chain", "provenance", "ml-security"]
dependencies = []   # core は runtime 依存ゼロ (ADR-0002)。新規追加は ADR 必須。

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
modelseal = "modelseal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/modelseal"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
